finish the functionality of 2 steps of signing in a new user ,but lacking of some cssin views.Because I suppose I will not use the view building in Bulma in the future

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,21 @@
  *= require_tree .
  *= require_self
  */
+
+@import "bulma";
+
+.is-notice {
+  @extend .is-success;
+}
+
+.is-alert {
+  @extend .is-danger;
+}
+
+span.error{
+  color: red;
+}
+
+abbr[title="required"]{
+  color: red;
+}
