--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,58 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Projekt</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title><%= Rails.configuration.x.title %></title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'application' %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+</head>
 
-  <body>
-    <%= yield %>
-  </body>
+<body>
+<div>
+<%= render "shared/alerts" %>
+</div>
+
+<nav class="navbar is-link">
+  <div class="navbar-brand">
+    <%= link_to root_path, class: "navbar-item" do %>
+        <h1 class="title is-5 has-text-white" data-target="navbar">projekt</h1>
+    <% end %>
+    <div class="navbar-burger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+  <div class="navbar-menu " id="navbar">
+    <div class="navbar-end">
+      <% if user_signed_in? %>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <%= link_to "新 建", '#', class: "navbar-link" %>
+            <div class="navbar-dropdown">
+              <%= link_to '项目', '#', class: "navbar-item" %>
+              <%= link_to '工作组', '#', class: "navbar-item" %>
+            </div>
+          </div>
+          <div class="navbar-item has-dropdown is-hoverable ">
+            <%= link_to '帐号', '#', class: "navbar-link" %>
+            <div class="navbar-dropdown is-right">
+              <%= link_to current_user.email, edit_user_registration_path, class: "navbar-item" %>
+              <%= link_to '退出帐号', destroy_user_session_path, method: "delete", class: "navbar-item" %>
+            </div>
+          </div>
+
+      <% else %>
+        <%= link_to '登录',new_user_session_path,class: "navbar-item" %>
+          <%= link_to '注册',new_user_registration_path, class: "navbar-item" %>
+      <% end %>
+    </div>
+  </div>
+</nav>
+<%= yield %>
+
+</body>
 </html>
